# open-reachout

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: engineering-spec.md  requirements-traceability.md
examples/music-marketplace/: tenant.yaml
examples/therapist-directory/: tenant.yaml
research/: market-research-report.md
src/open_reachout/: __init__.py
src/open_reachout/adapters/: fakes.py
src/open_reachout/agents/: composer.py  discovery.py  prompts.py  qualifier.py  reply_composer.py  schemas.py  synthesizer.py
src/open_reachout/api/: app.py  manage.py  (+1 more)
tests/: conftest.py  test_adapter_conformance.py  test_api_pg.py  test_bandit.py  test_canonical.py  test_composer_qualifier.py  test_concurrency_pg.py  test_config_and_states.py  test_dashboard_pg.py  test_discovery_pg.py  test_event_triggers_pg.py  test_followups_pg.py  test_gate11_staleness.py  test_gatekeeper.py  test_human_tasks_pg.py  test_injection_corpus.py  test_learning_pg.py  test_manage_ui_pg.py  test_monitor_pg.py  test_noshow_pg.py  test_nppes_and_dryrun.py  test_pg_gates.py  test_poll_and_dns.py  test_programs_pg.py  test_prospecting_pg.py  test_queue_pg.py  test_referrals_pg.py  test_replies.py  test_reply_composer_pg.py  test_review_ramp_pg.py  test_safety_events_pg.py  test_sender_profile_pg.py  test_sentiment_pg.py  test_signals_pg.py  test_smtp_sending.py  test_synthesizer.py  test_validators.py  test_variables_envelope.py  test_web_research.py  test_worker_e2e_pg.py
tests/fixtures/: nppes_sample.csv
tests/injection/: vectors.yaml
(+55 files in other folders)
