[project]
name = "open-reachout"
version = "0.0.1"
description = "Open-source framework for agentic, compliant outbound outreach: brief-driven prospect discovery, LLM-generated email, honest experimentation, and non-bypassable safety guardrails."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Open Reachout contributors" }]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.4", "mypy>=1.10", "fastapi>=0.110", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.1"]
gemini = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.40"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
reachout = "open_reachout.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_reachout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "gates: acceptance-gate suite (PRD section 10)",
  "disqualifying: gate failures that block release",
  "postgres: requires a live Postgres (set OR_TEST_DSN)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI dependency injection is call-in-default by design.
"src/open_reachout/api/app.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["open_reachout"]
mypy_path = "src"
